# rust-engine

./: Cargo.toml
assets/: frag.spv  main.rs  triangle.frag  triangle.vert  vert.spv
src/: ecs.rs  generational_index.rs  handle_index.rs  main.rs  render_pipeline.rs  shader.rs  vulkan_notes.md  vulkan_state.rs  window.rs
src/ecs/: entity.rs  mod.rs
src/ecs/generational_index/: index.rs  mod.rs
src/renderer/: mod.rs  render_pipeline.rs  shader.rs
