[package]
name = "rust_engine"
version = "0.1.0"
authors = ["Rens Althuis <Rens.Althuis@gmail.com>"]
edition = "2018"

[dependencies]
typemap = "0.3.3"
winit = "0.19.2"
gfx-hal = "0.2.1"
gfx-backend-vulkan = "0.2.3"
failure = "0.1.5"
failure_derive = "0.1.5"
glsl-to-spirv = "0.1.7"
arrayvec = "0.4.11"
image = "0.22.1"
log = "0.4.8"
env_logger = "0.6.2"